# NiMo-UI

./: CMakeLists.txt  README.md  gui.ui  package.xml  setup.py
config/: default.yaml
src/: ui.py
