<?xml version="1.0"?>
<package format="2">
<!-- Package Information -->
  <name>nimo_ui</name>
  <version>2.0.0</version>
  <description>The nimo_ui package</description>
  <license>MIT</license>

  <maintainer email="tdetlefs@andrew.cmu.edu">Thomas Detlefsen</maintainer>
  <author email="tdetlefs@andrew.cmu.edu">Thomas Detlefsen</author>
  
  <!-- Package Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>

</package>
